--- a/ReactApp-Digibinn/digibinn_app/package.json
+++ b/ReactApp-Digibinn/digibinn_app/package.json
@@ -9,12 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "firebase": "^9.17.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.21",
