--- a/ReactApp-Digibinn/digibinn_app/package.json
+++ b/ReactApp-Digibinn/digibinn_app/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase": "^9.17.2",
@@ -16,6 +18,7 @@
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
   },
