--- a/FlutterApp-Digibinn/pubspec.yaml
+++ b/FlutterApp-Digibinn/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^1.0.1
+  webview_flutter: ^4.0.7
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
