--- a/FlutterApp-Digibinn/pubspec.yaml
+++ b/FlutterApp-Digibinn/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_inappwebview: ^5.7.2+3
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.0
+  flutter_map: ^3.1.0
+  location: ^4.4.0
+  google_maps_flutter: ^2.2.5
+  latlong: ^0.6.1
+  
 
 dev_dependencies:
   flutter_test:
