--- a/FlutterApp-Digibinn/pubspec.yaml
+++ b/FlutterApp-Digibinn/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   latlong: ^0.6.1
   image_picker: ^0.8.7+1
   qr_code_tools: ^0.0.7
+  flutter_local_notifications: ^13.0.0
   
 
 dev_dependencies:
